fixed H1 spacing

--- a/FrontEnd/src/Components/CategoryIndexPage.css
+++ b/FrontEnd/src/Components/CategoryIndexPage.css
@@ -11,6 +11,10 @@
   justify-content: center;
 }
 
+.CatIndexBody h1{
+  padding-top: 60px;
+}
+
 #MiniTitle {
   font-size: 2rem;
   color: rgb(0, 63, 158);
